samples/_failures_safe/1761331160_97b217_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac282ef7.c: In function ‘main’:
./samples/SAFE/__tmp_ac282ef7.c:152:17: error: expected expression at end of input
  152 |                 } else if (status == -
      |                 ^
./samples/SAFE/__tmp_ac282ef7.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ac282ef7.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ac282ef7.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ac282ef7.c:152:17: error: expected declaration or statement at end of input
